[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ttt-core = { path = "../ttt-core" }
proto = { path = "../proto" }
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
